[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philips_hue_midi"
version = "0.1.5"
description = "A program that allows controlling Philips Hue lights using a midi keyboard."
authors = [
    { name = "Aru", email = "arunorth@gmail.com" }
]

readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "mido",
    "phue",
    "python-rtmidi",
    "toml"
]