[project]
name = "philips-hue-midi"
version = "2.1.0"
description = "A program that allows controlling Philips Hue lights using a midi keyboard."
authors = [
    { name = "Aru", email = "arunorth@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.0",
    "mido>=1.3.3",
    "phue>=1.1",
    "python-rtmidi>=1.5.8",
    "requests>=2.32.3",
    "rich>=14.0.0",
]

[project.scripts]
run="philips_hue_midi:main"
